# neos-ts

./: .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitmodules  README-zh_CN.md  README.md  index.html  neos.config.json  neos.config.prod.json  package-lock.json  package.json  super-pre-release.json  sync_proto.sh  sync_super_prerelease.sh  tsconfig.json  vite.config.ts
docs/: release-2023_02_19_CN.md
neos-assets/structure-decks/: Drytron.ydk  Hero.ydk  Sky Striker Ace.ydk
prompts/: project-overview.md
rust-src/: Cargo.toml  README.md
rust-src/.cargo/: config.toml
rust-src/src/: buffer.rs  lib.rs  utils.rs
rust-src/src/adapters/: damage.rs  mod.rs
src/: App.tsx  Card.tsx  JoinHome.tsx  JoinRoom.tsx  WaitRoom.tsx  common.ts  env.d.ts  i18n.tsx  index.tsx  main.tsx  store.ts  ygopro.ts
src/Language/: LanguageContext.tsx  LanguageSelector.tsx
src/api/: cards.ts  cookies.ts  deck.json  deck.ts  forbiddens.ts  helper.ts  index.ts  ocgcore.proto  ocgcore.ts  strings.ts  superPreRelease.ts
src/config/: automation.ts  defaults.ts  env.ts  index.ts  ui.ts
src/container/: compat.ts  context.ts  impl.ts  index.ts
src/css/: JoinRoom.css  Mora.css  WaitRoom.css
src/hook/: index.ts  useApp.ts  useEnv.ts  useMeshClick.ts
src/infra/: buffer.ts  console.ts  eventbus.ts  index.ts  pfetch.ts  stream.ts
src/middleware/: socket.ts  sqlite.ts
src/reducers/: cardsSlice.ts  chatSlice.ts  joinSlice.ts  moraSlice.ts  playerSlice.ts
src/service/: executor.ts  onSocketMessage.ts  onSocketOpen.ts
src/stores/: accountStore.ts  cardStore.ts  chatStore.ts  deckStore.ts  (+12 more)
(+659 files in other folders)
